# facejoy

./: .gitignore  README.md  pyproject.toml
facejoy/: config.py  main.py  mouse.py  physics.py
